Atualização no projeto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head> 
 <body> 
     <header> 
-        <h1>Bem-vindos gatinhos gordos!</h1> 
+        <h1>Bem-vindos gatinhos gordos!</h1>
+        <p>gostamos de gatinhos (animais) gordos.</p> 
     </header> 
     <main> 
         <p>Esta é uma pagina para gatinhos acima do peso.</p> <button>Clique para uma surpresa</button> 
